--- a/style.css
+++ b/style.css
@@ -3,85 +3,289 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box; /*nos permite incluir o preenchimento e a borda na largura e altura total de um elemento.*/
-    font-family: 'Poppins', sans-serif; 
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
-
 
 body {
-    background: linear-gradient(#040228 0%, #0075c7 40%);
-    min-height: 100vh;
-    overflow-x: hidden;
+    background: #eaeaea;
+    color: #222;
 }
 
-
-header {
-    position: absolute;
+.header {
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    padding: 30px 100px;
-    display: flex; /*habilita o flexbox*/
+    padding: 30px 8%;
+    background: transparent;
+    display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 100;
 }
 
+
 .logo {
-    color: #fff;
-    font-size: 2em;
-    cursor: default;
-}
-
-.navbar a{
-    color: #fff;
+    font-size: 25px;
+    color: #222;
     text-decoration: none;
-    margin-left: 20px;
     font-weight: 600;
-    padding: 6px 15px;
-    border-radius: 20px;
+    opacity: 0;
+    animation: slideRight 1s ease forwards;
 }
 
-.navbar a:hover, 
+.navbar a {
+    display: inline-block;
+    font-size: 18px;
+    color: #222;
+    text-decoration: none;
+    font-weight: 500;
+    margin: 0 20px;
+    transition: .3s;
+    opacity: 0;
+    animation: slideTop .5s ease forwards; /*nome - duração - suavização na aceleração - manter a posição final*/
+    animation-delay: calc(.2s * var(--i));
+}
+
+.navbar a:hover,
 .navbar a.active {
-    background: #00a3b9;
+    color: #1743e3;
 }
 
-.parallax {
-    position: relative;
+.social-media {
     display: flex;
+    justify-content: space-between;
+    width: 150px;
+    height: 40px;
+
+}
+
+.social-media a {
+    display: inline-flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid transparent;
+    text-decoration: none;
+    transform: rotate(45deg);
+    transition: .5s;
+    opacity: 0;
+    animation: slideSci.5s ease forwards;
+    animation-delay: calc(.2s * var(--i));
 }
 
-.parallax img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    pointer-events: none; /*propriedade define se um elemento reage ou não a eventos de ponteiro*/
+.social-media a:hover {
+    border-color: #eaeaea;
+}
+
+.social-media a i {
+    font-size: 24px;
+    color: #eaeaea;
+    transform: rotate(-45deg);
 }
 
 
-.sec {
+.home {
     position: relative;
-    padding: 100px;
-    background: #040228;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 8% 0;
+    overflow: hidden;
 }
 
-.sec h2 {
-    font-size: 3em;
-    color: #fff;
-    margin-bottom: 10px;
+.home-content {
+    max-width: 630px;
 }
 
-.sec h2:nth-child(2) {
-    font-size: 2em;
+.home-content h1 {
+    font-size: 50px;
+    line-height: 1.2;
+    opacity: 0;
+    animation: slideBottom 1s ease forwards;
+    animation-delay: 1s;
 }
 
-.sec p {
-    font-size: 1em;
-    color: #fff;
-    font-weight: 300;
+.home-content h3 {
+    font-size: 40px;
+    color: #1743e3;
+    opacity: 0;
+    animation: slideRight 1s ease forwards;
+    animation-delay: 1.3s;
 }
+
+.home-content p {
+    font-size: 16px;
+    margin: 15px 0 30px;
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: 1.6s;
+    
+}
+
+
+.btn {
+    display: inline-block;
+    padding: 10px 28px;
+    background: #1743e3;
+    border: 2px solid #1743e3; 
+    border-radius: 6px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    font-size: 16px;
+    color: #eaeaea;
+    letter-spacing: 1px;
+    text-decoration: none;
+    font-weight: 600;
+    transition: .5s;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    animation-delay: 2s;
+}
+
+.btn:hover {
+    background: transparent;
+    color: #1743e3;
+}
+
+.home-img {
+    position: relative;
+    right: -7%;
+    width: 450px;
+    height: 450px;
+    transform: rotate(45deg);
+}
+
+.home-img .rhombus {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #eaeaea ;
+    border: 25px solid #1743e3 ;
+    box-shadow: -15px 15px 15px rgba(0, 0, 0, .2);
+    opacity: 0;
+    animation: zoomOut 1s ease forwards;
+    animation-delay: 1.6s;
+    
+}
+
+.home-img .rhombus img {
+    position: absolute;
+    top: 110px;
+    left: -250px;
+    max-width: 750px;
+    transform: rotate(-45deg);
+    opacity: 0;
+    animation: car 1s ease forwards;
+    animation-delay: 2s;
+}
+
+.home .rhombus2 {
+    position: absolute;
+    top: -25%;
+    right: -25%;
+    width: 800px;
+    height: 800px;
+    background: #1743e3;
+    transform: rotate(45deg);
+    z-index: -1;
+    opacity: 0;
+    animation: rhombus2 1s ease forwards;
+
+}
+
+ /* KEYFRAMES ANIMATION*/
+
+ @keyframes slideRight{
+    0% { /*ININCIO*/
+        transform:  translateX(-100px);
+        opacity: 0;
+    }
+    100% { /*FIM*/
+        transform:  translateX(0);
+        opacity: 1;
+    }
+ }
+
+ @keyframes slideLeft{
+    0% {
+        transform:  translateX(100px);
+        opacity: 0;
+    }
+    100% {
+        transform:  translateX(0);
+        opacity: 1;
+    }
+ }
+
+ @keyframes slideTop{
+    0% {
+        transform:  translateY(100px);
+        opacity: 0;
+    }
+    100% {
+        transform:  translateY(0);
+        opacity: 1;
+    }
+ }
+
+ @keyframes slideBottom{
+    0% {
+        transform:  translateY(-100px);
+        opacity: 0;
+    }
+    100% {
+        transform:  translateY(0);
+        opacity: 1;
+    }
+ }
+ 
+ @keyframes slideSci{
+    0% {
+        transform:  translateX(100px) rotate(45deg);
+        opacity: 0;
+    }
+    100% {
+        transform:  translateX(0) rotate(45deg);
+        opacity: 1;
+    }
+ }
+
+ @keyframes zoomOut{
+    0% {
+        transform:  scale(1.1);
+        opacity: 0;
+    }
+    100% {
+        transform:  scale(1);
+        opacity: 1;
+    }
+ }
+
+
+ @keyframes car {
+    0% {
+        transform:  translate(300px, -300px) scale(0) rotate(-45deg);
+        opacity: 0;
+    }
+    100% {
+        transform:  translate(0, 0) scale(1) rotate(-45deg);
+        opacity: 1;
+    }
+ }
+
+ 
+ @keyframes rhombus2 {
+    0% {
+        right: -40%;
+        opacity: 0;
+    }
+    100% {
+        right: -25%;
+        opacity: 1;
+    }
+ }
